Fix icon alignment in IE11

--- a/client/Timeline.scss
+++ b/client/Timeline.scss
@@ -28,7 +28,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 62px;
 }
 .timeline-icon-pre-line {
   border-left: 1px solid rgb(81, 111, 144);
